# task-teaching-and-supervision

./: README.md
Attentional_System/julius-4.3.1-linuxbin/: 00readme-ja.txt  00readme.txt  run_install.sh
Attentional_System/julius-4.3.1-linuxbin/include/: 00readme.txt
Attentional_System/julius-4.3.1-linuxbin/julius-simple/: Makefile
Attentional_System/julius-4.3.1-linuxbin/lib/: 00readme.txt
Attentional_System/julius-4.3.1-linuxbin/plugin-sample/: Makefile
Attentional_System/julius-4.3.1-linuxbin/support/: 00update.sh  cpman.sh  cpmanja.sh  setprefix.pl
Attentional_System/seed_segment/: CMakeLists.txt  LTM.prolog  LTM_clean.prolog  LTM_clean_addWater.prolog  Map2Memory.prolog  manifest.xml  package.xml
Attentional_System/seed_segment/eclipseclp/lib/x86_64_linux/: SITE_PARAMS
Attentional_System/seed_segment/launch/: seed.launch
Attentional_System/seed_segment/msg/: AllObject.msg  Object.msg  Result.msg  ResultField.msg
Attentional_System/seed_segment/src/: seed.cpp  seed_header.h  seed_wakeUp.cpp
Attentional_System/seed_segment/src/behaviour/: Fg.h  Forget.h  Listing.h  decide.h  input_stream.h  ltm_stream.h  remember.h  sequence.h  show.h  wmv_stream.h
Attentional_System/seed_segment/src/behaviour/SAPHARI/: attach_bracket.h  clean.h  give.h  glue.h  go.h  place.h  plan_listener.h  point.h  receive.h  saphari.h  scene.h  simulation_scene.h  take.h
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/: alfred_DM.h  fusionEngine.h  gestureRecognition.h  juliusAudioRecognizer.h
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/AlfredDialogueManager/: Cane_Riporto.xml  ChoiceAmong2.xml  DialogFlow.cpp  DialogFlow.h  Fission.h  FlowState.cpp  FlowState.h  Input.ui  Int1.xml  Int2.xml  Int3.xml  Mike.xml  No.xml  Observ.cpp  Observ.h  Ottimizzazione (copia).xml  Ottimizzazione.xml  POMDP.cpp  POMDP.h  POMDPState.cpp  POMDPState.h  Param.h  Request.xml  Solo_Giallo.xml  Solo_Rosso.xml  Switch1.xml  Switch2.xml  Test.xml  Test0.xml  Test1.xml  Test2.xml  Test3.xml  Test4.xml  dialogFlow1.xml
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/AlfredDialogueManager/Scenario/: base.odg  base.tif  cerca.tif  choice.tif  close_to.tif  exit.tif  indica.tif  mondo.cfg  mondo.world  mostra.tif  no_capito.tif  prendi.tif  reperti.inc  robot.inc
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/AlfredDialogueManager/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/AlfredDialogueManager/nbproject/private/: configurations.xml  private.xml
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/audio/: message.flac  scriptSpeechJulius
Attentional_System/seed_segment/src/behaviour/SAPHARI/multimodal_hri_framework/scfg/: SCFG.h  grammar  grammar_airbus  grammar_old  grammar_stable
Attentional_System/seed_segment/src/behaviour/TUM/: TUM_kuka.h
Attentional_System/speech_seed/: CMakeLists.txt  LTM_autosave.prolog  mainpage.dox  manifest.xml  message.txt  outf  scriptSpeechJulius
Attentional_System/speech_seed/asr/: big_Fixed.dict  dizionario.dfa  dizionario.dict  dizionario.grammar  dizionario.term  dizionario.voca  dizionario_monaco.dfa  dizionario_monaco.dict  dizionario_monaco.grammar  tiedlist  (+6 more)
Robot_Manager/LWR_seed_control/: CMakeLists.txt  manifest.xml
Robot_Manager/LWR_seed_control/include/LWR_seed_control/: GenerateDSTrajectory.h  robotBehaviourManager.h  robotControl.h
Robot_Manager/LWR_seed_control/include/LWR_seed_control/DMP/: dmp.h  fourier_approx.h  linear_approx.h  radial_approx.h
Robot_Manager/LWR_seed_control/src/: GenerateDSTrajectory.cpp  executeTask.cpp  learnTask.cpp  robotBehaviourManager.cpp  robotControl.cpp
Robot_Manager/LWR_seed_control/src/DMP/: dmp.cpp  fourier_approx.cpp  linear_approx.cpp  radial_approx.cpp
Robot_Manager/kuka_seed_commands/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
Robot_Manager/kuka_seed_commands/data/: objects_database_coffee.xml
Robot_Manager/kuka_seed_commands/include/kuka_seed_commands/: commandInterpreter.h  objectsList.h
Robot_Manager/kuka_seed_commands/launch/: scene_simulator.launch
Robot_Manager/kuka_seed_commands/src/: commandInterpreter.cpp  objectsList.cpp  objectsSimulator.cpp
Robot_Manager/lwr_seed_control/: CMakeLists.txt  package.xml
Robot_Manager/lwr_seed_control/include/lwr_seed_control/: GenerateDSTrajectory.h  lwrControllerDefinitions.h  robotBehaviourManager.h  robotControl.h
Robot_Manager/lwr_seed_control/include/lwr_seed_control/DMP/: dmp.h  fourier_approx.h  function_approx.h  linear_approx.h  radial_approx.h
Robot_Manager/lwr_seed_control/src/: GenerateDSTrajectory.cpp  executeTask.cpp  learnTask.cpp  robotBehaviourManager.cpp  robotControl.cpp
Robot_Manager/lwr_seed_control/src/DMP/: dmp.cpp  fourier_approx.cpp  linear_approx.cpp  radial_approx.cpp
Scene_Simulator/defs/: materials.xml
Scene_Simulator/launch/: scene_simulator.launch
config/: scene_config.rviz
defs/wsg50_gripper/: wsg50_gripper_defs.xml
launch/: scene_simulator.launch~
lwr_rviz_visualization/: CMakeLists.txt  package.xml
lwr_rviz_visualization/config/: scene_config.rviz
lwr_rviz_visualization/defs/: materials.xml  util_defs.xml
lwr_rviz_visualization/defs/lwr/: gazebo_defs.xml  kuka_lwr_arm_defs.xml
lwr_rviz_visualization/defs/wsg50_gripper/: wsg50_gripper_defs.urdf  wsg50_gripper_defs.xml
lwr_rviz_visualization/launch/: lwr_visualization.launch  scene_simulator.launch
lwr_rviz_visualization/meshes/lwr/: arm_base.dae  arm_flanche.dae  arm_segment_a.dae  arm_segment_b.dae  arm_segment_last.dae
lwr_rviz_visualization/robots/: kuka_lwr_arm.expanded.xml  kuka_lwr_arm.urdf.xml
meshes/kimp/: arm_base.dae  arm_segment_last.dae
meshes/wsg50_gripper/: WSG50_110.dae
robots/: kuka_lwr_arm.urdf.xml
(+24 files in other folders)
