<package>
  <name>lwr_seed_control</name>
  <description>lwr_seed_control</description>
  <maintainer email="matteo.saveriano@tum.de">Matteo Saveriano</maintainer>
  <version>0.0.1</version>
  <author>Matteo Saveriano</author>
  <license>BSD</license>
  <url></url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kuka_seed_commands</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>rodyman_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kuka_seed_commands</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>rodyman_msgs</run_depend>
</package>
