<?xml version="1.0"?>
<package format="2">
  <name>lwr_seed_control</name>
  <description>lwr_seed_control</description>
  <maintainer email="matteo.saveriano@tum.de">Matteo Saveriano</maintainer>
  <version>0.0.1</version>
  <author>Matteo Saveriano</author>
  <license>BSD</license>
  <url></url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kuka_seed_commands</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>kuka_seed_commands</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>kuka_seed_commands</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
